{
    "name": "BaseMovement",
    "maps": [
        {
            "name": "Keyboard & Mouse",
            "id": "c8a5f0b0-d8f7-43bc-8bfa-43842210e19a",
            "actions": [
                {
                    "name": "Movement",
                    "type": "Value",
                    "id": "d6d54af2-977b-482b-8bd3-c182843c3af9",
                    "expectedControlType": "Vector3",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Run",
                    "type": "Button",
                    "id": "bcbe2d4a-29e5-4453-8ad1-4008b442e098",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Look",
                    "type": "Value",
                    "id": "e93c59ea-65b0-4d8e-a529-7c4e7ea00f4d",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "ComfortObject",
                    "type": "Button",
                    "id": "33a1d1ec-c9f5-4bc8-86ce-6d6aada50e29",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "PickUp",
                    "type": "Button",
                    "id": "bd3f7701-2787-4588-9c64-bf9f8719a66e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "None",
                    "type": "Value",
                    "id": "f2006f42-d045-4ae6-baee-8b97cc3884a6",
                    "expectedControlType": "Touch",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "3D Vector",
                    "id": "5ef63e56-c595-4c19-b265-a9f549186047",
                    "path": "3DVector",
                    "interactions": "",
                    "processors": "NormalizeVector3",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "Up",
                    "id": "8101cf78-f108-4e03-a119-6e18938e4223",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Down",
                    "id": "19b566f9-7d78-4799-abb7-00f28dcaf107",
                    "path": "<Keyboard>/ctrl",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Left",
                    "id": "ce5e0f28-217c-464c-afee-ae8b2f4a3060",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Right",
                    "id": "f6d43892-c82c-44d7-987b-4c0be16abf18",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Forward",
                    "id": "9731381a-a919-4fe7-87ad-e26c2c87bbe1",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Backward",
                    "id": "217806d9-6674-4b66-ac7a-6f8b3f298b1a",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "73adb64d-30f9-453c-b509-a27bf202d94e",
                    "path": "<Keyboard>/shift",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Run",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "373c3a61-db40-41e0-9289-6c39317dfad6",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Look",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f3178678-36bf-47b6-a639-ee18a22a28fe",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ComfortObject",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b3a3be74-ead0-4411-b22b-5a59bcd5b818",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PickUp",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2f991fc8-4044-49b4-8c69-736d9548a34e",
                    "path": "<Sensor>",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "None",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}